--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>FilmTrack</title>
     <link rel="stylesheet" href="./src/output.css">
+    <link rel="icon" href="./filmtrack.png">
   </head>
-  <body style = "scroll-behavior: smooth;">
+  <body style="scroll-behavior: smooth;">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
